--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
-.container {
-  margin-top: 10px;
+.footerPosition {
+  background-color: blue;
+  
 }
 
-.purchase-card {
-  width: 350px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 1em;
+.footerContainer {
+  position: absolute;
+  width: 100%;
+  height: 400px;
+}
+
+.container {
+  margin-top: 10px;
 }
 
 .purchase-card > .show-grid {
@@ -24,7 +29,11 @@
   border-radius: 17px;
 }
 
-.price-strike {
-  text-decoration-line: line-through;
-  color: grey;
+
+.footerText {
+  color: black;
+  font-size: 30px;
+
 }
+
+
